--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -58,11 +58,8 @@
 <div id="footer">
   <div class="container">
     <p class="text-muted">This app is powered by <a href="http://www.goodreads.com">goodreads.com</a></p>
+    <p class="text-muted">Cover images provided by <a href="https://openlibrary.org/dev/docs/api/covers">Open Library</a></p>
   </div>
 </div>
-
-<ul class="nav pull-right scroll-top">
-  <li><a href="#" title="Scroll to top"><i class="glyphicon glyphicon-chevron-up"></i></a></li>
-</ul>
 
 </html>
