--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -13,16 +13,8 @@
 		We will need one piece of information to link with your goodreads account. You can find this information on your goodreads profile page.<br>
 		<a href = 'https://www.goodreads.com'>Goodreads Home</a><br>
 		<br>
-		<div class="row">
-        <div class="col-lg-3">
-         <div class="input-group">
-         <input type="text" class="form-control" placeholder="Enter Goodreads ID...">
-        <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Join!</button>
-      </span>
-    </div><!-- /input-group -->
-  </div><!-- /.col-lg-6 -->
-</div><!-- /.row -->
+         <input type="text" name="gr_id" placeholder="Enter ID...">
+         <input type = "submit" value = "Join!">
 		<p>(to locate your ID number, click 'My Books,' your ID is listed in the url after the word 'list')</p>
 		
 		<br>
