--- a/nextbook/templates/nextbook/base_site.html
+++ b/nextbook/templates/nextbook/base_site.html
@@ -2,6 +2,7 @@
 <head>
 {% load staticfiles %}
 <link rel="stylesheet" href="{% static "nextbook/main.css" %}">
+<script type="text/javascript" src="jquery-2.1.4.min.js"></script>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
@@ -47,7 +48,7 @@
 	{% block content %}
 	{% endblock %}
 </div>
-<script src = "http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<!-- <script src = "http://code.jquery.com/jquery-1.11.3.min.js"></script> -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 <div id="footer">
