--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -3,6 +3,7 @@
 {% load staticfiles %}
 <link rel="stylesheet" href="{% static "nextbook/main.css" %}">
 <!-- Latest compiled and minified CSS -->
+<script type="text/javascript" src="jquery-2.1.4.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
 <!-- Optional theme -->
@@ -51,8 +52,7 @@
   </div>
 <!-- <img alt="backdrop" src="{% static "nextbook/nextbook.jpg" %}"> -->
 </div>
-<script src = "http://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
 </body>
 
 <div id="footer">
