--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 <link rel="stylesheet" href="{% static "nextbook/main.css" %}">
 <!-- Latest compiled and minified CSS -->
-<script type="text/javascript" src="jquery-2.1.4.min.js"></script>
+<script src="//code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
 <!-- Optional theme -->
