--- a/nextbook/templates/nextbook/base_site.html
+++ b/nextbook/templates/nextbook/base_site.html
@@ -8,8 +8,7 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-<script type="text/javascript" src="jquery-2.1.4.min.js"></script>
-
+<script src="//code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 {% block navbar %}
